--- a/Phase1/s_game_dev/setup_canvas/index.html
+++ b/Phase1/s_game_dev/setup_canvas/index.html
@@ -38,8 +38,8 @@
         function createGradientBackground() {
             // Tạo gradient cho nền canvas
             let gradient = context.createLinearGradient(0, 0, canvas.width, canvas.height);
-            gradient.addColorStop(0, '#ff8082'); 
-            gradient.addColorStop(1, '#0099b2');
+            gradient.addColorStop(0, '#00FF00'); 
+            gradient.addColorStop(1, '#FFFF00');
 
             // Áp dụng gradient làm màu nền cho canvas
             context.fillStyle = gradient;
