--- a/basic collision/ex2.html
+++ b/basic collision/ex2.html
@@ -20,19 +20,18 @@
         const restitution = 0.9; 
 
         class Rectangle {
-            constructor(x, y, width, height, mass, vx, vy, color) {
+            constructor(x, y, mass, vx, vy) {
                 this.x = x;
                 this.y = y;
-                this.width = width;
-                this.height = height;
+                this.width = 100;
+                this.height = 70;
                 this.mass = mass;
                 this.vx = vx;
                 this.vy = vy;
-                this.color = color; // Custom color for the rectangle
             }
 
             draw() {
-                context.fillStyle = this.color;
+                context.fillStyle = '#ff8080';
                 context.fillRect(this.x, this.y, this.width, this.height);
             }
 
